--- a/css/utilities.css
+++ b/css/utilities.css
@@ -26,17 +26,20 @@
 }
 
 .u-border-top {
-  border-top: 1px solid rgb(255 255 255 / 8%);
+  border-top: 1px solid var(--border-color);
+  opacity: 0.15;
 }
 
 .u-border-bottom {
-  border-bottom: 1px solid rgb(255 255 255 / 8%);
+  border-bottom: 1px solid var(--border-color);
+  opacity: 0.15;
 }
 
 .u-divider {
   width: 100%;
   height: 1px;
-  background: rgb(255 255 255 / 8%);
+  background: var(--border-color);
+  opacity: 0.15;
 }
 
 .u-grid-2 {
